syntax = "proto3";

option go_package = "/internal/pkg/genproto";

import "muallimah-submodule/protos/common.proto";

package protos;

service ProductService {
    rpc CreateProduct(ProductCreate) returns (Void);
    rpc UpdateProduct(ProductUpdate) returns (Void);
    rpc DeleteProduct(ById) returns (Void);
    rpc ListProducts(ProductFilter) returns (ProductList);
    rpc GetProduct(ById) returns (ProductGet);
    rpc AddPicture(ProductPicture) returns (Void);
    rpc DeletePicture(ProductPicture) returns (Void);
}

message ProductCreate {
    string Title = 1;
    string Description = 2;
    float Price = 3;
    repeated string PictureUrls = 4;
}

message ProductUpt {
    string Title = 1;
    string Description = 2;
    float Price = 3;
}

message ProductUpdate {
    string Id = 1;
    ProductUpt Body = 2;
}

message ProductPicture {
    string ProductId = 1;
    string PictureUrl = 2;
}

message ProductGet {
    string Id = 1;
    string Title = 2;
    string Description = 3;
    float Price = 4;
    repeated string PictureUrls = 5;
    string CreatedAt = 6;
}

message ProductFilter {
    string Title = 1;
    float PriceFrom = 2;
    float PriceTo = 3;
    Pagination Pagination = 4;
}

message ProductList {
    repeated ProductGet Products = 1;
    int64 TotalCount = 2;
    Pagination Pagination = 3;
}
