syntax = "proto3";

option go_package = "/internal/pkg/genproto";

import "muallimah-submodule/protos/common.proto";

package protos;

service BookService {
    rpc CreateBook(BookCreate) returns (Void);
    rpc UpdateBook(BookUpdate) returns (Void);
    rpc DeleteBook(ById) returns (Void);
    rpc ListBooks(BookFilter) returns (BookList);
    rpc GetBook(ById) returns (BookGet);
    rpc AddPicture(BookPicture) returns (Void);
    rpc DeletePicture(BookPicture) returns (Void);
}

message BookCreate {
    string Title = 1;
    string Description = 2;
    float Price = 3;
    repeated string PictureUrls = 4;
}
message BookUpt {
    string Title = 1;
    string Description = 2;
    float Price = 3;
}
message BookUpdate {
    string Id = 1;
    BookUpt Body = 2;
}
message BookPicture {
    string BookId = 1;
    string PictureUrl = 2;
}
message BookGet {
    string Id = 1;
    string Title = 2;
    string Description = 3;
    float Price = 4;
    repeated string PictureUrls = 5;
    string CreatedAt = 6;
}
message BookFilter {
    string Title = 1;
    float PriceFrom = 2;
    float PriceTo = 3;
    Pagination Pagination = 4;
}
message BookList {
    repeated BookGet Books = 1;
    int64 TotalCount = 2;
    Pagination Pagination = 3;
}
